--- a/CounterStrike.html
+++ b/CounterStrike.html
@@ -11,13 +11,14 @@ https://muratterginn.github.io/GameScope/index.html
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
     <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
-    <title>Darkest Dungeon</title> <!-- Title of the webpage -->
+    <title>Counter-Strike</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
     
     <link rel="stylesheet" href="lightBox.js">
     <script src="jquery.js"></script>
     
+
     <script src="dropDownMenu.js"></script>
 </head>
 
@@ -51,34 +52,37 @@ https://muratterginn.github.io/GameScope/index.html
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Darkest Dungeon</h2> <!-- Heading for home -->
+            <h2 class="title">Counter-Strike</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
                 <div class="info">
-                    <p><b>Release year:</b> 2015</p>
-                    <p><b>Publisher:</b><a href="https://www.redhookgames.com/"> Red Hook Studios</a></p>
-                    <p><b>Genre:</b> roguelike, strategy</p>
-                    <p><b>Rate(Steam):</b> 9/10</p>
+                    <p><b>Release year:</b> 2000</p>
+                    <p><b>Publisher:</b><a href="https://www.valvesoftware.com/en/"> Valve Corporation</a></p>
+                    <p><b>Genre:</b> first person, multiplayer</p>
+                    <p><b>Rate(Steam):</b> 10/10</p>
                 </div>
                 <article><!-- Article containing text -->
-                    "Darkest Dungeon" is a challenging gothic roguelike turn-based RPG about the psychological stresses
-                    of adventuring.
-                    Developed by Red Hook Studios, the game is set in a dark and atmospheric world where players manage
-                    a roster of heroes battling their way through a series of dungeons beneath a decrepit mansion.
-                    Players must not only fight monsters but also contend with various stressors like fear, paranoia,
-                    and starvation, which affect their characters' mental states and can lead to significant in-game
-                    consequences. The game is noted for its striking art style, complex mechanics, and brutal
-                    difficulty, emphasizing strategy and careful management of resources and personnel.
+
+                    "Counter-Strike" is a pioneering first-person shooter game that began as a mod for "Half-Life" and
+                    quickly evolved into a standalone title, developed by Valve. First released in 1999, it set the
+                    standard for what competitive shooters could be, with its fast-paced, skill-based gameplay. The game
+                    pits two teams against each other: terrorists and counter-terrorists, with objectives that vary by
+                    mode—ranging from bomb planting and defusal to hostage rescue. Over the years, "Counter-Strike" has
+                    been lauded for its simplicity, depth, and highly competitive nature, which made it a staple in
+                    esports tournaments around the world. Its success spawned several updates and sequels, including
+                    "Counter-Strike: Source" and "Counter-Strike: Global Offensive," each enhancing the franchise with
+                    improved graphics, new mechanics, and more intricate maps, maintaining the series’ position as a
+                    cornerstone in the genre of tactical shooters.
                 </article>
             </div>
             <div class="images">
-                <a href="DDicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
-                    <img src="DDicon.jpg" alt="icon">
+                <a href="CSicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
+                    <img src="CSicon.jpg" alt="icon">
                 </a>
-                <a href="DDp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
-                    <img src="DDp1.jpg" alt="picture1">
+                <a href="CSp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
+                    <img src="CSp1.jpg" alt="picture1">
                 </a>
-                <a href="DDp2.png" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
-                    <img src="DDp2.png" alt="picture2">
+                <a href="CSp2.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
+                    <img src="CSp2.jpg" alt="picture2">
                 </a>
             </div>
         </div>
