--- a/DeadbyDaylight.html
+++ b/DeadbyDaylight.html
@@ -11,13 +11,14 @@ https://muratterginn.github.io/GameScope/index.html
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
     <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
-    <title>Darkest Dungeon</title> <!-- Title of the webpage -->
+    <title>Dead by Daylight</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
     
     <link rel="stylesheet" href="lightBox.js">
     <script src="jquery.js"></script>
     
+
     <script src="dropDownMenu.js"></script>
 </head>
 
@@ -51,34 +52,39 @@ https://muratterginn.github.io/GameScope/index.html
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Darkest Dungeon</h2> <!-- Heading for home -->
+            <h2 class="title">Dead by Daylight</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
                 <div class="info">
-                    <p><b>Release year:</b> 2015</p>
-                    <p><b>Publisher:</b><a href="https://www.redhookgames.com/"> Red Hook Studios</a></p>
-                    <p><b>Genre:</b> roguelike, strategy</p>
+                    <p><b>Release year:</b> 2016</p>
+                    <p><b>Publisher:</b><a href="https://www.bhvr.com/"> Behaviour Interactive</a></p>
+                    <p><b>Genre:</b> co-op, online</p>
                     <p><b>Rate(Steam):</b> 9/10</p>
                 </div>
                 <article><!-- Article containing text -->
-                    "Darkest Dungeon" is a challenging gothic roguelike turn-based RPG about the psychological stresses
-                    of adventuring.
-                    Developed by Red Hook Studios, the game is set in a dark and atmospheric world where players manage
-                    a roster of heroes battling their way through a series of dungeons beneath a decrepit mansion.
-                    Players must not only fight monsters but also contend with various stressors like fear, paranoia,
-                    and starvation, which affect their characters' mental states and can lead to significant in-game
-                    consequences. The game is noted for its striking art style, complex mechanics, and brutal
-                    difficulty, emphasizing strategy and careful management of resources and personnel.
+
+
+                    "Dead by Daylight" is an asymmetric multiplayer horror game developed by Behaviour Interactive,
+                    released in 2016. The game features a thrilling hide-and-seek style gameplay where one player takes
+                    on the role of a killer, while four others play as survivors, trying to evade the killer and escape
+                    the playing area. Each killer and survivor has unique abilities, creating a dynamic play experience
+                    where strategy and adaptability are key. The game is set in dark, eerie environments that contribute
+                    to its tense atmosphere. Over the years, "Dead by Daylight" has expanded its universe with numerous
+                    DLCs, incorporating a variety of original and iconic characters from various horror franchises such
+                    as "Halloween," "Stranger Things," and "Saw." This inclusion adds a rich diversity to the game and
+                    enhances the overall experience with familiar horror themes and new mechanics. The game's success is
+                    driven by its intense, unpredictable gameplay and its ability to foster both cooperative and
+                    competitive play among users.
                 </article>
             </div>
             <div class="images">
-                <a href="DDicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
-                    <img src="DDicon.jpg" alt="icon">
+                <a href="DbDicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
+                    <img src="DbDicon.jpg" alt="icon">
                 </a>
-                <a href="DDp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
-                    <img src="DDp1.jpg" alt="picture1">
+                <a href="DbDp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
+                    <img src="DbDp1.jpg" alt="picture1">
                 </a>
-                <a href="DDp2.png" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
-                    <img src="DDp2.png" alt="picture2">
+                <a href="DbDp2.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
+                    <img src="DbDp2.jpg" alt="picture2">
                 </a>
             </div>
         </div>
