--- a/DyingLight.html
+++ b/DyingLight.html
@@ -11,13 +11,14 @@ https://muratterginn.github.io/GameScope/index.html
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
     <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
-    <title>Darkest Dungeon</title> <!-- Title of the webpage -->
+    <title>Dying Light</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
     
     <link rel="stylesheet" href="lightBox.js">
     <script src="jquery.js"></script>
     
+
     <script src="dropDownMenu.js"></script>
 </head>
 
@@ -51,34 +52,38 @@ https://muratterginn.github.io/GameScope/index.html
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Darkest Dungeon</h2> <!-- Heading for home -->
+            <h2 class="title">Dying Light</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
                 <div class="info">
                     <p><b>Release year:</b> 2015</p>
-                    <p><b>Publisher:</b><a href="https://www.redhookgames.com/"> Red Hook Studios</a></p>
-                    <p><b>Genre:</b> roguelike, strategy</p>
-                    <p><b>Rate(Steam):</b> 9/10</p>
+                    <p><b>Publisher:</b><a href="https://techland.net/"> Techland</a></p>
+                    <p><b>Genre:</b> survival, shooter</p>
+                    <p><b>Rate(Steam):</b> 10/10</p>
                 </div>
                 <article><!-- Article containing text -->
-                    "Darkest Dungeon" is a challenging gothic roguelike turn-based RPG about the psychological stresses
-                    of adventuring.
-                    Developed by Red Hook Studios, the game is set in a dark and atmospheric world where players manage
-                    a roster of heroes battling their way through a series of dungeons beneath a decrepit mansion.
-                    Players must not only fight monsters but also contend with various stressors like fear, paranoia,
-                    and starvation, which affect their characters' mental states and can lead to significant in-game
-                    consequences. The game is noted for its striking art style, complex mechanics, and brutal
-                    difficulty, emphasizing strategy and careful management of resources and personnel.
+
+
+                    "Dying Light" is an action-adventure survival horror game developed by Techland and released in
+                    2015. Set in a vast and dangerous open world overrun by a vicious zombie outbreak, the game stands
+                    out for its emphasis on parkour-style movement, allowing players to traverse the urban environment
+                    with fluidity and speed. As players navigate the city of Harran, they must scavenge for supplies,
+                    craft weapons, and battle a wide array of zombies that become increasingly dangerous as night
+                    falls—when the deadliest predators emerge, and the game shifts into a more intense survival horror
+                    experience. "Dying Light" incorporates a day-night cycle that significantly affects gameplay
+                    dynamics, adding a strategic layer to the player's interaction with the world. With its engaging
+                    combat system, a compelling narrative, and cooperative multiplayer mode, "Dying Light" offers a
+                    robust and thrilling experience that pushes the boundaries of the survival horror genre.
                 </article>
             </div>
             <div class="images">
-                <a href="DDicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
-                    <img src="DDicon.jpg" alt="icon">
+                <a href="DLicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
+                    <img src="DLicon.jpg" alt="icon">
                 </a>
-                <a href="DDp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
-                    <img src="DDp1.jpg" alt="picture1">
+                <a href="DLp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
+                    <img src="DLp1.jpg" alt="picture1">
                 </a>
-                <a href="DDp2.png" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
-                    <img src="DDp2.png" alt="picture2">
+                <a href="DLp2.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
+                    <img src="DLp2.jpg" alt="picture2">
                 </a>
             </div>
         </div>
