--- a/GoatSimulator.html
+++ b/GoatSimulator.html
@@ -11,13 +11,14 @@ https://muratterginn.github.io/GameScope/index.html
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
     <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
-    <title>Darkest Dungeon</title> <!-- Title of the webpage -->
+    <title>Goat Simulator</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
     
     <link rel="stylesheet" href="lightBox.js">
     <script src="jquery.js"></script>
     
+
     <script src="dropDownMenu.js"></script>
 </head>
 
@@ -51,34 +52,39 @@ https://muratterginn.github.io/GameScope/index.html
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Darkest Dungeon</h2> <!-- Heading for home -->
+            <h2 class="title">Goat Simulator</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
                 <div class="info">
-                    <p><b>Release year:</b> 2015</p>
-                    <p><b>Publisher:</b><a href="https://www.redhookgames.com/"> Red Hook Studios</a></p>
-                    <p><b>Genre:</b> roguelike, strategy</p>
+                    <p><b>Release year:</b> 2014</p>
+                    <p><b>Publisher:</b><a href="https://www.coffeestain.com/"> Coffee Stain Studios</a></p>
+                    <p><b>Genre:</b> indie, adventure</p>
                     <p><b>Rate(Steam):</b> 9/10</p>
                 </div>
                 <article><!-- Article containing text -->
-                    "Darkest Dungeon" is a challenging gothic roguelike turn-based RPG about the psychological stresses
-                    of adventuring.
-                    Developed by Red Hook Studios, the game is set in a dark and atmospheric world where players manage
-                    a roster of heroes battling their way through a series of dungeons beneath a decrepit mansion.
-                    Players must not only fight monsters but also contend with various stressors like fear, paranoia,
-                    and starvation, which affect their characters' mental states and can lead to significant in-game
-                    consequences. The game is noted for its striking art style, complex mechanics, and brutal
-                    difficulty, emphasizing strategy and careful management of resources and personnel.
+
+
+                    "Goat Simulator" is an offbeat, third-person action game developed by Coffee Stain Studios, renowned
+                    for its humorous and unconventional gameplay. Released in 2014, the game started as a joke
+                    prototype, but its popularity on social media led to a full release. In "Goat Simulator," players
+                    control a goat and are encouraged to explore the game's open world while causing as much destruction
+                    as possible. The game is known for its deliberately glitchy and physics-based mechanics that often
+                    result in unpredictable and hilarious outcomes. Objectives are loosely defined, with the main goal
+                    being to simply wreak havoc and collect points for performing various stunts and interactions within
+                    the environment. The game's absurdity is complemented by its parodic elements, mocking more serious
+                    simulation games. "Goat Simulator" has spawned several expansions and versions, including ones with
+                    zombies, space travel, and MMO-style gameplay, continuously adding to its chaotic and fun-filled
+                    universe.
                 </article>
             </div>
             <div class="images">
-                <a href="DDicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
-                    <img src="DDicon.jpg" alt="icon">
+                <a href="GSicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
+                    <img src="GSicon.jpg" alt="icon">
                 </a>
-                <a href="DDp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
-                    <img src="DDp1.jpg" alt="picture1">
+                <a href="GSp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
+                    <img src="GSp1.jpg" alt="picture1">
                 </a>
-                <a href="DDp2.png" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
-                    <img src="DDp2.png" alt="picture2">
+                <a href="GSp2.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
+                    <img src="GSp2.jpg" alt="picture2">
                 </a>
             </div>
         </div>
