--- a/Horror.html
+++ b/Horror.html
@@ -7,9 +7,9 @@
     <title>Horror</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
-    <link rel="stylesheet" href="jquery-ui.min.css">
-    <script src="jquery-3.7.1.min.js"></script>
-    <script src="jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="jquery-ui.css">
+    <script src="jquery.js"></script>
+    <script src="jquery-ui.js"></script>
     <script src="dropDownMenu.js"></script>
     <script src="tooltip.js"></script>
 
@@ -58,8 +58,8 @@
                     <table>
                         <tr>
                             <td><a href="LayersOfFear.html" title="Layers of Fear"><img src="LOFicon.jpg" alt="" class="imgs"></a></td> <!-- Image 1 -->
-                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 2 -->
-                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 3 -->
+                            <td><a href="DyingLight.html" title="Dying Light"><img src="DLicon.jpg" alt="" class="imgs"></a></td> <!-- Image 2 -->
+                            <td><a href="DeadbyDaylight.html" title="Dead by Daylight"><img src="DbDicon.jpg" alt="" class="imgs"></a></td> <!-- Image 3 -->
                         </tr>
                     </table>
                 </div>
