--- a/HouseFlipper.html
+++ b/HouseFlipper.html
@@ -15,7 +15,7 @@ https://muratterginn.github.io/GameScope/index.html
 
     <link rel="stylesheet" href="superfish.css">
     <link rel="stylesheet" href="lightBox.js">
-    <script src="jquery-3.7.1.min.js"></script>
+    <script src="jquery.js"></script>
     <script src="dropDownMenu.js"></script>
 </head>
 
