--- a/Left4Dead2.html
+++ b/Left4Dead2.html
@@ -11,13 +11,14 @@ https://muratterginn.github.io/GameScope/index.html
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
     <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
-    <title>Darkest Dungeon</title> <!-- Title of the webpage -->
+    <title>Left 4 Dead 2</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
     
     <link rel="stylesheet" href="lightBox.js">
     <script src="jquery.js"></script>
     
+
     <script src="dropDownMenu.js"></script>
 </head>
 
@@ -51,34 +52,37 @@ https://muratterginn.github.io/GameScope/index.html
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Darkest Dungeon</h2> <!-- Heading for home -->
+            <h2 class="title">Left 4 Dead 2</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
                 <div class="info">
-                    <p><b>Release year:</b> 2015</p>
-                    <p><b>Publisher:</b><a href="https://www.redhookgames.com/"> Red Hook Studios</a></p>
-                    <p><b>Genre:</b> roguelike, strategy</p>
-                    <p><b>Rate(Steam):</b> 9/10</p>
+                    <p><b>Release year:</b> 2009</p>
+                    <p><b>Publisher:</b><a href="https://www.valvesoftware.com/en/"> Valve Corporation</a></p>
+                    <p><b>Genre:</b> first person, survival</p>
+                    <p><b>Rate(Steam):</b> 10/10</p>
                 </div>
                 <article><!-- Article containing text -->
-                    "Darkest Dungeon" is a challenging gothic roguelike turn-based RPG about the psychological stresses
-                    of adventuring.
-                    Developed by Red Hook Studios, the game is set in a dark and atmospheric world where players manage
-                    a roster of heroes battling their way through a series of dungeons beneath a decrepit mansion.
-                    Players must not only fight monsters but also contend with various stressors like fear, paranoia,
-                    and starvation, which affect their characters' mental states and can lead to significant in-game
-                    consequences. The game is noted for its striking art style, complex mechanics, and brutal
-                    difficulty, emphasizing strategy and careful management of resources and personnel.
+
+
+                    "Left 4 Dead 2" is a cooperative first-person shooter developed by Valve, where players navigate
+                    through an apocalyptic pandemic alongside three other survivors. Released in 2009, it builds on its
+                    predecessor by introducing four new survivors, a wider range of weapons including melee options, and
+                    new environments stretching from Savannah, Georgia, to New Orleans, Louisiana. The game features a
+                    sophisticated AI that adapts to player performance, enhancing replayability. Special infected with
+                    unique abilities add strategic depth, requiring players to coordinate closely to succeed. Renowned
+                    for its intense, fast-paced action and strong emphasis on teamwork, "Left 4 Dead 2" remains a
+                    landmark in multiplayer gaming, celebrated for its ability to seamlessly blend cooperative gameplay
+                    with thrilling zombie-slaying encounters.
                 </article>
             </div>
             <div class="images">
-                <a href="DDicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
-                    <img src="DDicon.jpg" alt="icon">
+                <a href="LDicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
+                    <img src="LDicon.jpg" alt="icon">
                 </a>
-                <a href="DDp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
-                    <img src="DDp1.jpg" alt="picture1">
+                <a href="LDp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
+                    <img src="LDp1.jpg" alt="picture1">
                 </a>
-                <a href="DDp2.png" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
-                    <img src="DDp2.png" alt="picture2">
+                <a href="LDp2.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
+                    <img src="LDp2.jpg" alt="picture2">
                 </a>
             </div>
         </div>
