--- a/Simulation.html
+++ b/Simulation.html
@@ -7,9 +7,9 @@
     <title>Simulation</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
-    <link rel="stylesheet" href="jquery-ui.min.css">
-    <script src="jquery-3.7.1.min.js"></script>
-    <script src="jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="jquery-ui.css">
+    <script src="jquery.js"></script>
+    <script src="jquery-ui.js"></script>
     <script src="dropDownMenu.js"></script>
     <script src="tooltip.js"></script>
 </head>
@@ -57,8 +57,8 @@
                     <table>
                         <tr>
                             <td><a href="HouseFlipper.html" title="House Flipper"><img src="HFicon.jpg" alt="" class="imgs"></a></td> <!-- Image 1 -->
-                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 2 -->
-                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 3 -->
+                            <td><a href="TheSims.html" title="The Sims 4"><img src="TSicon.jpg" alt="" class="imgs"></a></td> <!-- Image 2 -->
+                            <td><a href="GoatSimulator.html" title="Goat Simulator"><img src="GSicon.jpg" alt="" class="imgs"></a></td> <!-- Image 3 -->
                         </tr>
                     </table>
                 </div>
