--- a/TheSims.html
+++ b/TheSims.html
@@ -11,13 +11,14 @@ https://muratterginn.github.io/GameScope/index.html
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
     <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
-    <title>Darkest Dungeon</title> <!-- Title of the webpage -->
+    <title>The Sims 4</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
     
     <link rel="stylesheet" href="lightBox.js">
     <script src="jquery.js"></script>
     
+
     <script src="dropDownMenu.js"></script>
 </head>
 
@@ -51,34 +52,36 @@ https://muratterginn.github.io/GameScope/index.html
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Darkest Dungeon</h2> <!-- Heading for home -->
+            <h2 class="title">The Sims 4</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
                 <div class="info">
-                    <p><b>Release year:</b> 2015</p>
-                    <p><b>Publisher:</b><a href="https://www.redhookgames.com/"> Red Hook Studios</a></p>
-                    <p><b>Genre:</b> roguelike, strategy</p>
+                    <p><b>Release year:</b> 2014</p>
+                    <p><b>Publisher:</b><a href="https://www.ea.com/"> Electronic Arts</a></p>
+                    <p><b>Genre:</b> life simulation, character customization</p>
                     <p><b>Rate(Steam):</b> 9/10</p>
                 </div>
                 <article><!-- Article containing text -->
-                    "Darkest Dungeon" is a challenging gothic roguelike turn-based RPG about the psychological stresses
-                    of adventuring.
-                    Developed by Red Hook Studios, the game is set in a dark and atmospheric world where players manage
-                    a roster of heroes battling their way through a series of dungeons beneath a decrepit mansion.
-                    Players must not only fight monsters but also contend with various stressors like fear, paranoia,
-                    and starvation, which affect their characters' mental states and can lead to significant in-game
-                    consequences. The game is noted for its striking art style, complex mechanics, and brutal
-                    difficulty, emphasizing strategy and careful management of resources and personnel.
+
+                    "The Sims 4" is a life simulation game developed by Maxis and published by Electronic Arts, marking
+                    the fourth major installment in the popular Sims franchise. Released in 2014, the game allows
+                    players to create and control characters known as "Sims" in various activities and form
+                    relationships, much like real life. The core appeal of "The Sims 4" lies in its incredibly detailed
+                    character customization options, enhanced building tools, and the deep emotional states of Sims that
+                    affect gameplay in nuanced ways. Over the years, numerous expansions and downloadable content packs
+                    have added depth and diversity to the game's world, introducing new themes, professions, and
+                    adventures. With its rich modding community and continual updates, "The Sims 4" maintains a vibrant
+                    gameplay experience that simulates life's complexities and joys in a uniquely interactive form.
                 </article>
             </div>
             <div class="images">
-                <a href="DDicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
-                    <img src="DDicon.jpg" alt="icon">
+                <a href="TSicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
+                    <img src="TSicon.jpg" alt="icon">
                 </a>
-                <a href="DDp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
-                    <img src="DDp1.jpg" alt="picture1">
+                <a href="TSp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
+                    <img src="TSp1.jpg" alt="picture1">
                 </a>
-                <a href="DDp2.png" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
-                    <img src="DDp2.png" alt="picture2">
+                <a href="TSp2.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
+                    <img src="TSp2.jpg" alt="picture2">
                 </a>
             </div>
         </div>
