--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
     <title>GameScope</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
-    <link rel="stylesheet" href="jquery-ui.min.css">
-    <script src="jquery-3.7.1.min.js"></script>
-    <script src="jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="jquery-ui.css">
+    <script src="jquery.js"></script>
+    <script src="jquery-ui.js"></script>
     <script src="dropDownMenu.js"></script>
     <script src="tooltip.js"></script>
 </head>
