--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ https://muratterginn.github.io/GameScope/index.html
     
     <title>GameScope</title> <!-- Title of the webpage -->
     <link rel="stylesheet" href="superfish.css">
-    <script src="jquery-3.7.1.min.js"></script>
+    <script src="jquery.js"></script>
     <script src="dropDownMenu.js"></script>
 </head>
 
