--- a/Fallout.html
+++ b/Fallout.html
@@ -11,13 +11,14 @@ https://muratterginn.github.io/GameScope/index.html
 <head>
     <link rel="stylesheet" href="common.css"> <!-- Link to common stylesheet -->
     <link rel="stylesheet" href="infos.css"> <!-- Link to common stylesheet -->
-    <title>Darkest Dungeon</title> <!-- Title of the webpage -->
+    <title>Fallout 76</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
     
     <link rel="stylesheet" href="lightBox.js">
     <script src="jquery.js"></script>
     
+
     <script src="dropDownMenu.js"></script>
 </head>
 
@@ -51,34 +52,37 @@ https://muratterginn.github.io/GameScope/index.html
             <a href=""><img src="ad.png"></a> <!-- Advertisement image with link -->
         </div>
         <div class="content"> <!-- Content section -->
-            <h2 class="title">Darkest Dungeon</h2> <!-- Heading for home -->
+            <h2 class="title">Fallout 76</h2> <!-- Heading for home -->
             <div class="text"> <!-- Text section -->
                 <div class="info">
-                    <p><b>Release year:</b> 2015</p>
-                    <p><b>Publisher:</b><a href="https://www.redhookgames.com/"> Red Hook Studios</a></p>
-                    <p><b>Genre:</b> roguelike, strategy</p>
-                    <p><b>Rate(Steam):</b> 9/10</p>
+                    <p><b>Release year:</b> 2018</p>
+                    <p><b>Publisher:</b><a href="https://bethesda.net/tr/dashboard"> Bethesda Softworks</a></p>
+                    <p><b>Genre:</b> open world, multiplayer</p>
+                    <p><b>Rate(Steam):</b> 7/10</p>
                 </div>
                 <article><!-- Article containing text -->
-                    "Darkest Dungeon" is a challenging gothic roguelike turn-based RPG about the psychological stresses
-                    of adventuring.
-                    Developed by Red Hook Studios, the game is set in a dark and atmospheric world where players manage
-                    a roster of heroes battling their way through a series of dungeons beneath a decrepit mansion.
-                    Players must not only fight monsters but also contend with various stressors like fear, paranoia,
-                    and starvation, which affect their characters' mental states and can lead to significant in-game
-                    consequences. The game is noted for its striking art style, complex mechanics, and brutal
-                    difficulty, emphasizing strategy and careful management of resources and personnel.
+
+                    "Fallout 76" is an online multiplayer role-playing game developed by Bethesda Game Studios, set in
+                    the expansive post-apocalyptic world of the Fallout series. Released as the series' first
+                    multiplayer game, "Fallout 76" explores the landscape of West Virginia in an alternate timeline
+                    shortly after a nuclear war. The game emphasizes survival mechanics, resource gathering, and
+                    base-building, within a world populated by other players. Despite its rocky launch and initial
+                    criticism over technical issues and game design choices, subsequent updates and expansions have
+                    significantly improved the experience. These updates introduced new quests, NPCs, and a more
+                    traditional Fallout narrative experience. "Fallout 76" offers a unique take on the series by
+                    combining familiar RPG elements with new multiplayer dynamics, set against the backdrop of a richly
+                    detailed and vast post-nuclear American landscape.
                 </article>
             </div>
             <div class="images">
-                <a href="DDicon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
-                    <img src="DDicon.jpg" alt="icon">
+                <a href="Ficon.jpg" target="_blank" data-lightbox="light-box" data-title="House Flipper Icon">
+                    <img src="Ficon.jpg" alt="icon">
                 </a>
-                <a href="DDp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
-                    <img src="DDp1.jpg" alt="picture1">
+                <a href="Fp1.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 1">
+                    <img src="Fp1.jpg" alt="picture1">
                 </a>
-                <a href="DDp2.png" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
-                    <img src="DDp2.png" alt="picture2">
+                <a href="Fp2.jpg" target="_blank" data-lightbox="light-box" data-title="Screenshot 2">
+                    <img src="Fp2.jpg" alt="picture2">
                 </a>
             </div>
         </div>
