--- a/Shooter.html
+++ b/Shooter.html
@@ -7,9 +7,9 @@
     <title>Shooter</title> <!-- Title of the webpage -->
 
     <link rel="stylesheet" href="superfish.css">
-    <link rel="stylesheet" href="jquery-ui.min.css">
-    <script src="jquery-3.7.1.min.js"></script>
-    <script src="jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="jquery-ui.css">
+    <script src="jquery.js"></script>
+    <script src="jquery-ui.js"></script>
     <script src="dropDownMenu.js"></script>
     <script src="tooltip.js"></script>
 </head>
@@ -57,8 +57,8 @@
                     <table>
                         <tr>
                             <td><a href="Doom.html" title="DOOM"><img src="Dicon.jpg" alt="" class="imgs"></a></td> <!-- Image 1 -->
-                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 2 -->
-                            <td><a href="index.html"><img src="header.jpg" alt="" class="imgs"></a></td> <!-- Image 3 -->
+                            <td><a href="Left4Dead2.html" title="Left 4 Dead 2"><img src="LDicon.jpg" alt="" class="imgs"></a></td> <!-- Image 2 -->
+                            <td><a href="CounterStrike.html" title="Counter-Strike"><img src="CSicon.jpg" alt="" class="imgs"></a></td> <!-- Image 3 -->
                         </tr>
                     </table>
                 </div>
