sprint 4 part 1 partial done

--- a/Shooter.html
+++ b/Shooter.html
@@ -12,6 +12,7 @@
     <script src="js/jquery-ui.js"></script>
     <script src="js/dropDownMenu.js"></script>
     <script src="js/tooltip.js"></script>
+    <script src="js/ajax.js"></script>
 </head>
 
 <body> <!-- Body section of the webpage -->
@@ -46,10 +47,10 @@
             <div class="innerContent"> <!-- Inner content division -->
                 <div class="list"> <!-- List of categories -->
                     <ul>
-                        <li><a href="RolePlaying.html" class="inText">Role Playing</a></li> <!-- Link to Horror category -->
-                        <li><a href="Simulation.html" class="inText">Simulation</a></li> <!-- Link to Simulator category -->
-                        <li><a href="Horror.html" class="inText">Horror</a></li> <!-- Link to Arcade category -->
-                        <li><a href="Shooter.html" class="inText">Shooter</a></li> <!-- Link to Shooter category -->
+                        <li><a href="#" class="inText" id="RolePlaying">Role Playing</a></li> <!-- Link to Horror category -->
+                        <li><a href="#" class="inText" id="Simulation">Simulation</a></li> <!-- Link to Simulator category -->
+                        <li><a href="#" class="inText" id="Horror">Horror</a></li> <!-- Link to Arcade category -->
+                        <li><a href="#" class="inText" id="Shooter">Shooter</a></li> 
                     </ul>
                 </div>
                 <div class="table"> <!-- Table displaying category images -->
