sprint part 1 done i think

--- a/Horror.html
+++ b/Horror.html
@@ -13,7 +13,7 @@
     <script src="js/dropDownMenu.js"></script>
     <script src="js/tooltip.js"></script>
     <script src="js/ajax.js"></script>
-
+    <script src="js/dialog.js"></script>
 </head>
 
 <body> <!-- Body section of the webpage -->
@@ -70,8 +70,7 @@
 
     <footer> <!-- Footer section -->
         <div class="sponsor"> <!-- Sponsor section -->
-            <h2>Spon</h2> <!-- Sponsor heading -->
-            <p>something catchy</p> <!-- Sponsor description -->
+            <h3 id="pop">Click me to contact</h3> 
         </div>
         <div class="social"> <!-- Social media links -->
             <a href=""><img src="insta.png" alt="instagram" class="socialPic"></a> <!-- Instagram link -->
@@ -80,6 +79,8 @@
             <a href=""><img src="youtube.png" alt="youtube" class="socialPic"></a> <!-- YouTube link -->
         </div>
     </footer>
-
+    <div id="dialog" title="Contact GameScope">
+        <a href="contact.html">Way to contact us</a>
+    </div>
 </body>
 </html>
