--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ https://muratterginn.github.io/GameScope/index.html
                 <br>
             </div>
 
-            <h2 style="color: red;">Popular Games</h2>
+            <h2 style="color: red;" class="popular">Popular Games</h2>
             <div id="games"></div>
         </div>
         </div>
